--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,8 @@
 version: '3.8'
 services:
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
+    container_name: flask-server
     ports:
     - 5000:5000
     volumes:
@@ -13,6 +12,7 @@ services:
 
   postgres_db:
     image: postgres:alpine
+    container_name: postgres-database
     restart: always
     environment:
       - POSTGRES_USER=<your_USER>
